server/vm-k8s/k8s/overlay/prod/jupyter/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jupyter
spec:
  entryPoints:
    - internal
  routes:
    - kind: Rule
      match: Host(`jupyter.i.morawskim.pl`)
      services:
        - kind: Service
          name: jupyter
          port: 80
      middlewares:
        - name: openid-auth
        - name: add-x-forwarded-proto
